--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,7 +1,7 @@
 services:
   mysql:
     image: mysql
-    container_name: mysql-container
+    container_name: gc-board-mysql-container
     environment:
       MYSQL_ROOT_PASSWORD: ${MYSQL_PASSWORD}
       MYSQL_DATABASE: ${MYSQL_DATABASE}
@@ -14,7 +14,7 @@ services:
       - mysql-data:/var/lib/mysql
   redis:
     image: redis
-    container_name: redis-container
+    container_name: gc-board-redis-container
     command: redis-server --requirepass ${REDIS_PASSWORD}
     ports:
       - "6379:6379"
