--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,7 @@ dependencies {
     implementation "org.springframework.boot:spring-boot-starter-security"
     implementation "org.springframework.boot:spring-boot-starter-web"
     implementation "org.springframework.boot:spring-boot-starter-validation"
+    implementation "org.springframework.boot:spring-boot-starter-mail"
 
     implementation "io.github.openfeign.querydsl:querydsl-core:${querydslVersion}"
     implementation "io.github.openfeign.querydsl:querydsl-jpa:${querydslVersion}"
